<resources>
    <string name="app_name">Where Was I</string>
    <string name="Stop">Stop</string>
    <string name="close">Close</string>
    <string name="time">Times: </string>
    <string name="coordinates">Coordinates: </string>
    <string name="address">Address: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_on_map">Show in map</string>
    <string name="app_description">Where Was I is a protected application that helps detecting  who you have been with and where.\nAll the data is stored on your device and won\'t share with others</string>
    <string name="nickname">Nickname</string>
    <string name="start">Lets Start</string>
    <string name="hello_name">Hello, </string>
    <string name="daily_summary">14 Day Summary</string>
    <string name="fourteen_days_summary">14 Days Summary</string>
    <string name="activity">Activity</string>
    <string name="home">Home</string>
    <string name="interactions">Interactions: </string>
    <string name="locations">"Locations: "</string>
    <string name="only_with_interactions">Only With Interactions</string>
    <string name="positives">"Alerted Interactions: "</string>
    <string name="export_data">Export Data</string>
    <string name="mark_as_positive">Mark as Positive</string>
    <string name="export">Export</string>
    <string name="alert">Alert</string>
    <string name="you_have_been_expose">Someone that been around you marked himself as positive</string>
    <string name="interactions_found">Interactions: %s \nPositives Interactions %s</string>
    <string name="today">Today</string>
    <string name="yestrday">Yestrday</string>
    <string name="days_ago">Days ago</string>
    <string name="no_notifications">No Notifications Found</string>
    <string name="running">Active</string>
    <string name="today_interactions">Today Interactions</string>
    <string name="today_positives">Today Positives</string>
    <string name="loading">Loading</string>

    <string name="context_preference_key" translatable="false">com.kdkvit.wherewasi.sonitalk.context_preference_key_</string>
    <string name="permission_level_key" translatable="false">PERMISSION_LEVEL</string>
    <string name="bundleRequestCode_key" translatable="false">BUNDLE_REQUEST_CODE_KEY</string>
    <string name="currentRequestAction_key" translatable="false">CURRENT_REQUEST_ACTION</string>
    <string name="currentRequestGranted_key" translatable="false">CURRENT_REQUEST_GRANTED</string>
    <string name="currentRequestAnswered_key" translatable="false">CURRENT_REQUEST_ANSWERED</string>
    <string name="permissionLevelWasSet_key" translatable="false">PERMISSION_LEVEL_WAS_SET</string>
    <string name="permissionLevelWasAnswered_key" translatable="false">PERMISSION_LEVEL_WAS_ANSWERED</string>
    <string name="statusChannelName">Data-over-sound Status Channel</string>
    <string name="defaultStatusNotificationTitle" translatable="false">Data over sound</string>
    <string name="defaultStatusNotificationMessage">Ready to start communicating</string>
    <string name="sendingStatusNotificationTitle" translatable="false">Data over sound</string>
    <string name="sendingStatusNotificationMessage">Currently sending...</string>
    <string name="receivingStatusNotificationTitle" translatable="false">Data over sound</string>
    <string name="receivingStatusNotificationMessage">Currently receiving...</string>
    <string name="sendingAndReceivingStatusNotificationTitle" translatable="false">Data over sound</string>
    <string name="sendingAndReceivingStatusNotificationMessage">Currently sending and Receiving...</string>
    <string name="l2_permission_level_text">Strict - Ask on each communication request</string>
    <string name="l1_permission_level_text">Moderate - Allow until next start of app</string>
    <string name="l0_permission_level_text">Low - Allow always</string>
    <string name="decline_permission_level_text">Decline</string>
    <string name="permission_level_question">Choose data-over-sound privacy setting for %s app:</string>
    <string name="permission_request_l1_question">Allow %s to send/receive data via sound ? (until next start of the app)</string>
    <string name="permission_request_l2_question">Allow %s to send/receive data via sound ? (just this time)</string>
    <string name="permission_request_positive_text">Allow</string>
    <string name="permission_request_negative_text">Deny</string>
    <string name="permission_request_title">Allow data over sound ?</string>
    <string name="permission_request_change_text">Settings</string>
    <string name="permission_l0_description">exchange data over sound without asking</string>
    <string name="permission_l0_label">Always allow data over sound</string>
    <string-array name="permission_level_texts">
        <item>@string/l0_permission_level_text</item>
        <item>@string/l1_permission_level_text</item>
        <item>@string/l2_permission_level_text</item>
        <item>@string/decline_permission_level_text</item>
    </string-array>
    <string name="permissionRequestExplanation">Microphone permission is needed to receive messages via sound.</string>
    <string name="on_receiving_listening_permission_required">Data-over-sound permission required to receive messages</string>
    <string name="on_sending_sending_permission_required">Data-over-sound permission required to send messages</string>
    <string name="decoder_start_text">Start listening...</string>
    <string name="permission_request_explanation_positive">Open the Permission Menu</string>
    <string name="permission_request_explanation_negative">No thanks</string>
    <string name="signal_generator_not_created">No Signal was created yet!</string>
    <string name="communication">Communication</string>
</resources>