<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        >


        <LinearLayout
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/circle_dra"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:background="@drawable/circle_dra"
                android:layout_gravity="center"
                android:id="@+id/status_circle_view"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/background_dark"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        android:paddingEnd="15dp"
        android:paddingStart="10dp"
        android:layout_marginBottom="15dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:id="@+id/location_time_tv"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:id="@+id/location_locations_tv"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interactions"
            android:id="@+id/location_interactions_tv"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_arrow_forward"
            android:backgroundTint="@android:color/transparent"
            android:id="@+id/show_in_map_btn"
            />
    </LinearLayout>
</LinearLayout>